manipulated some data

--- a/index.html
+++ b/index.html
@@ -336,6 +336,15 @@
                 properties: {
                     "name": {
                         nameSingular: "Name"
+                    },
+                    "website": {
+                        nameSingular: "Website"
+                    },
+                    "employees": {
+                        nameSingular: "Employees"
+                    },
+                    "sales_revenue": {
+                        nameSingular: "Sales Revenue"
                     }
                 },
                 zoomDepth: 14
